--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,34 +1,21 @@
 ---
+
+galaxy_info: {}
+
 dependencies:
-  - role: debops.secret
 
-# dependencies:
+    - role: debops.secret
 
-#        - role: debops.redis
-#          # We want the sentinel on the same server as redis
-#          redis_sentinel_standalone: False
-#
-#          # We dont need it, runs only on localhost
-#          redis_requirepass: False
-#          redis_slave_read_only: 'no'
-#
-#          redis_sentinel_bind: ['0.0.0.0']
-#          redis_sentinel_allow: ['0.0.0.0']
-#          tags: [ 'depend:redis' ]
+ansigenome_info:
+  galaxy_id: ''
 
-#        - role: debops.postgresql_server
-#          postgresql_server__hba_system:
-#            - comment: 'Openup for all local connections ipv6'
-#              type: 'local'
-#              database: 'all'
-#              user: 'all'
-#              address: [ '::1/128' ]
-#              method: 'md5'
-#
-#            - comment: 'Openup for all local connections'
-#              type: 'local'
-#              database: 'all'
-#              user: 'all'
-#              address: [ '127.0.0.1/32' ]
-#              method: 'md5'
-#          tags: [ 'postgresql_server' ]
+  travis: False
+
+  synopsis: |
+    Describe your role in a few paragraphs....
+
+  usage: |
+    Describe how to use in more detail...
+
+  #custom: |
+  #  Any custom output you want after the usage section..
