--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,23 +1,22 @@
 ---
 sentry__base_packages:
-  - python-setuptools
-  - python-pip
-  - python-virtualenv
-  - virtualenv  # Only on debian?
-  - python-dev
-  - libxslt1-dev
-  - gcc
-  - libffi-dev
-  - libjpeg-dev
-  - libxml2-dev
-  - libxslt-dev
-  - libyaml-dev
-  - postgresql-server-dev-9.4
-  - cmake
+  - 'python-setuptools'
+  - 'python-pip'
+  - 'python-virtualenv'
+  - 'virtualenv'  # Only on debian?
+  - 'python-dev'
+  - 'libxslt1-dev'
+  - 'gcc'
+  - 'libffi-dev'
+  - 'libjpeg-dev'
+  - 'libxml2-dev'
+  - 'libxslt-dev'
+  - 'libyaml-dev'
+  - 'postgresql-server-dev-9.4'
 
 sentry__packages: []
 
-sentry__version: '8.10.0'
+sentry__version: '8.8.0'
 
 sentry__fqdn: 'sentry.{{ sentry__domain }}'
 
@@ -55,24 +54,6 @@ sentry__postgresql_database:
 
 sentry__superusers: '{{ lookup("template", "lookup/sentry__config_admins.j2") | from_yaml }}'
 sentry__superuser_password_length: '32'
-
-sentry__apt__sources:
-  - uri:        'http://httpredir.debian.org/debian'
-    comment:    'Debian Stretch repository'
-    type:       'deb'
-    suite:      'stretch'
-    components: 'main'
-    distribution: 'Debian'
-
-sentry__apt_preferences__list:
-  - package: 'cmake'
-    by_role: 'debops.sentry'
-    suffix: '_Debian'
-    raw: |
-      Explanation: Install cmake from testing. Sentry 8.10.x needs symsynd which needs CMake 3.4.3+
-      Package: cmake
-      Pin: release o=Debian,n=stretch
-      Pin-Priority: 500
 
 sentry__nginx_upstream:
   name: 'sentry'
