--- a/meta/ansigenome.yml
+++ b/meta/ansigenome.yml
@@ -10,6 +10,8 @@ ansigenome_info:
 
   license_url: 'https://tldrlegal.com/license/gnu-general-public-license-v3-(gpl-3)'
 
+  min_ansible_version: '2.1.3'
+
   authors:
 
     - name:  'Steffen Lindner'
