--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Reload systemd
+  command: systemctl daemon-reload
+
 - name: Restart sentry services
   service:
       name: '{{ item }}'
