Generate a custom secret key for django

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -186,7 +186,6 @@ sentry__postgresql_roles:
 sentry__postgresql_database:
   name: '{{ sentry__database_name }}'
   owner: '{{ sentry__database_user }}'
-
                                                                    # ]]]
 # .. envvar:: sentry__superusers [[[
 #
@@ -198,8 +197,15 @@ sentry__superusers: '{{ lookup("template", "lookup/sentry__config_admins.j2") | 
 #
 # Length of the superuser password
 sentry__superuser_password_length: '32'
-
                                                                    # ]]]
+# .. envvar:: sentry__config_secret_key [[[
+#
+# The Django secret key used by the sentry application. It will be shared by
+# all hosts on the same domain.
+sentry__config_secret_key: '{{ lookup("password", secret + "/sentry/" +
+                               sentry__domain + "/config/secret_key length=64") }}'
+                                                                   # ]]]
+
 # .. envvar:: sentry__nginx_upstream [[[
 #
 # Nginx upstream configuration
